@@ -95,12 +95,9 @@ CP=$DBWRITER_PWD/lib/arco_common.jar:$DBWRITER_PWD/lib/dbwriter.jar
 BasicSettings
 SetUpInfoText
 
-
 EnterPW_oldmods=`stty -g`
 
 . $DBWRITER_PWD/inst_util.sh
-
-
 
 # ------------------------------------------------------------------------------
 #  This function determine if the 32-bit or 64-bit version of java is
@@ -111,7 +108,7 @@ EnterPW_oldmods=`stty -g`
 # ------------------------------------------------------------------------------
 queryJavaDataModel() {
    if [ "$JAVA_HOME" = "" ]; then
-     $INFOTEXT -n "Error: JAVA_HOME not set"
+     $INFOTEXT -n "Error: JAVA_HOME not set\n"
      exit 1
    fi
 
@@ -180,14 +177,16 @@ queryJavaDataModel() {
 # ---------------------------------------------------------------
 queryParams()
 {
-   $CLEAR
    ProcessSGERoot
-   $CLEAR
    GetCell
-   #We require cluster_name
+   
+   # We require cluster_name
    if [ -z "$SGE_CLUSTER_NAME" ]; then
-      "Error: Missing $SGE_ROOT/$SGE_CELL/common/cluster_name!!!"
-      exit 1
+      SGE_CLUSTER_NAME=`cat $SGE_ROOT/$SGE_CELL/common/cluster_name`
+      if [ -z "$SGE_CLUSTER_NAME" ]; then
+         "Error: Missing $SGE_ROOT/$SGE_CELL/common/cluster_name!!!"
+         exit 1
+      fi
    fi
 
    SetAdminUser
@@ -195,53 +194,26 @@ queryParams()
 
    queryJavaDataModel
 
+   DBWRITER_CONF=$SGE_ROOT/$SGE_CELL/common/dbwriter.conf
+   if [ -r $DBWRITER_CONF ]; then
+      $CLEAR
+      $INFOTEXT -u "\nDbwriter configuration file"
+      $INFOTEXT "\n$DBWRITER_CONF found.\n"
+      $INFOTEXT -n -ask y n -def y \
+      "Do you want to use the existing dbwriter configuration file? (y/n) [y] >> "
+      if [ $? -ne 0 ]; then
+         DBWRITER_CONF=""
+      fi
+   fi
+
+   setupDB $DBWRITER_PWD $DBWRITER_CONF
+
+   updateDBVersion $DBWRITER_PWD
+
+   $INFOTEXT -wait -n "Hit <RETURN> to continue >> "
+
    $CLEAR
-
-   $INFOTEXT -u "\nSetup your database connection parameters"
-   $INFOTEXT " "
-
-   # set the default database user
-   DB_USER=arco_write
-   while : 
-   do
-     dummy="p"
-     $INFOTEXT  -n \
-              "\nEnter your database type ( o = Oracle, p = PostgreSQL, m = MySQL ) [$dummy] >> "
-     result=`Enter $dummy`
-     if [ "$result" = 'p' ]; then
-         queryPostgres
-     elif [ "$result" = 'o' ]; then
-         queryOracle
-     elif [ "$result" = 'm' ]; then
-         queryMysql
-     fi
-
-     $CLEAR
-
-     $INFOTEXT -u "Database connection test"
-     
-     searchJDBCDriverJar $DB_DRIVER $DBWRITER_PWD/lib
-
-     for i in  $DBWRITER_PWD/lib/*.jar; do
-         CP=$CP:$i
-     done
-
-     testDB $DBWRITER_PWD
-     if [ $? -eq 0 ]; then
-        $INFOTEXT -wait -n "\nHit <RETURN> to continue >> "    
-        break
-     else
-        $INFOTEXT -ask y n -def y \
-                  -n "Do you want to repeat database connection setup? (y/n) [y] >>" 
-        if [ $? -ne 0 ]; then
-           break
-        fi
-     fi
-     
-   done
-
-   $CLEAR   
-   $INFOTEXT -u "Generic parameters"
+   $INFOTEXT -u "\nGeneric parameters"
 
    dummy=60
    while :
@@ -300,9 +272,9 @@ queryParams()
 }
 
 
-#
+#############################################################################
 #  Main
-#
+#############################################################################
 
 $INFOTEXT -u "\nWelcome to the @@GRID_ENGINE_NAME@@ ARCo dbwriter module installation"
 
@@ -331,6 +303,7 @@ do
    $INFOTEXT "     JAVA_HOME=$JAVA_HOME ($JAVA_VERSION)"
    $INFOTEXT "        DB_URL=$DB_URL"
    $INFOTEXT "       DB_USER=$DB_USER"
+   $INFOTEXT "     READ_USER=$READ_USER"
    $INFOTEXT "     DB_SCHEMA=$DB_SCHEMA"
    $INFOTEXT "      INTERVAL=$INTERVAL"
    $INFOTEXT "REPORTING_FILE=$REPORTING_FILE"
@@ -343,8 +316,6 @@ do
        break;
    fi
 done
-
-
 
 UTILDIR=$SGE_ROOT/dbwriter/util
 
@@ -373,8 +344,11 @@ ExecuteAsAdmin chmod 600 $TMP_FILE
 
 sed -e "s%@@DB_USER_PW@@%${DB_PW}%g" \
     -e "s%@@DB_USER@@%${DB_USER}%g"       \
+    -e "s%@@READ_USER@@%${READ_USER}%g"    \
     -e "s%@@DB_URL@@%${DB_URL}%g"         \
     -e "s%@@DB_SCHEMA@@%${DB_SCHEMA}%g"   \
+    -e "s%@@TABLESPACE@@%${TABLESPACE}%g" \
+    -e "s%@@TABLESPACE_INDEX@@%${TABLESPACE_INDEX}%g" \
     -e "s%@@DB_DRIVER@@%${DB_DRIVER}%g"   \
     -e "s%@@DERIVED_FILE@@%${DERIVED_FILE}%g" \
     -e "s%@@DELETE_FILE@@%${DELETE_FILE}%g" \
@@ -411,4 +385,3 @@ else
    $INFOTEXT "Installation of dbwriter failed"
    exit 1
 fi
-
